kubernetes/experimental-pvc.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-mypv
  labels:
    name: nginx-mypv
spec:
  containers:
    - name: nginx-mypv
      image: nginx
      ports:
        - name: web
          containerPort: 80
      volumeMounts:
        - name: experimental-pvc
          mountPath: /usr/share/nginx/html
  volumes:
    - name: experimental-pvc
      persistentVolumeClaim:
        # specify PVC name you defined
        claimName: experimental-pvc
