kubernetes/simple-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  backend:
    serviceName: web
    servicePort: 8080
